--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>HELLO</h1>
-    <p class="something">BLA BLA</p>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt optio, quam nisi rem laborum exercitationem officia obcaecati placeat beatae itaque ipsam sed? Recusandae explicabo magnam corrupti culpa, molestias voluptatibus facilis.</h2>
     <script src="main.js"></script>
 </body>
 
